--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 body {
-  background-color: #EEE;
-  font-family: cursive,sans-serif;
+  background-color: #12232E;
+  font-family: Georgia, serif;
 }
 
 a {
   text-decoration: none;
-  color: #006666;
+  color: #0074D9;
 }
+
+a:hover {font-size: 105%}
 
 h1, h2, h3 {
   margin: 0;
@@ -20,7 +22,8 @@ h1, h2, h3 {
 }
 
 #header {
-  background-color: #99ffcc;
+  background-color: #007CC7;
+  color: white;
   text-align: center;
   padding: 10px;
 }
@@ -36,7 +39,7 @@ h1, h2, h3 {
 
 #nav ul {
   list-style-type: none;
-  padding: 10px;
+  padding: 20px;
 }
 
 #nav .selected {
@@ -50,7 +53,7 @@ h1, h2, h3 {
 
 #footer {
   clear: both;
-  padding: 5px;
+  padding: 1px;
   background-color: #999;
   color: white;
   text-align: right;
